# AiDeskPetMan

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: ci.yml
config/: config.json
docs/: asset_import.md  build_insiders.md  manual_dependencies.md
scripts/: build_insiders.ps1  configure_insiders.ps1  local_paths.ps1  run_insiders.ps1
src/: main.cpp
src/GL/: glew.h  glext.h
src/ai/: chat_context.cpp  chat_context.hpp  chat_service.cpp  chat_service.hpp  cloud_engine.cpp  cloud_engine.hpp  inference_engine.hpp  inference_types.hpp  local_engine.cpp  local_engine.hpp  sse_parser.cpp  sse_parser.hpp
src/app/: app_error.hpp  application.cpp  application.hpp  config.cpp  config.hpp
src/core/: scheduler.cpp  scheduler.hpp  task.hpp
src/diagnostics/: crash_handler.cpp  crash_handler.hpp  logger.cpp  logger.hpp  performance_monitor.cpp  performance_monitor.hpp
src/renderer/: cubism_skin_loader.cpp  cubism_skin_loader.hpp  live2d_canvas.cpp  live2d_canvas.hpp  live2d_renderer.cpp  live2d_renderer.hpp  skin_loader.cpp  skin_loader.hpp
src/resource/: config_store.cpp  config_store.hpp
src/security/: dpapi_secret_store.cpp  dpapi_secret_store.hpp  secret_store.hpp
src/ui/: chat_bubble.cpp  chat_bubble.hpp  chat_input_dialog.cpp  chat_input_dialog.hpp  imgui_layer.cpp  imgui_layer.hpp  settings_window.cpp  settings_window.hpp
src/window/: desk_pet_window.cpp  desk_pet_window.hpp  window_manager.cpp  window_manager.hpp
tests/: chat_context_test.cpp  config_store_test.cpp  crash_dump_integration_test.cpp  dpapi_secret_store_test.cpp  performance_monitor_smoke_test.cpp  sse_parser_test.cpp  startup_smoke_test.cpp
ui/chat/: chat_input_dialog.ui
ui/settings/: settings_window.ui
ui/window/: desk_pet_window.ui
